--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "wait-on": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
+  "main": "public/main.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
+    "electron:start": "wait-on tcp:3000 && electron .",
+    "electron:build": ""
   },
   "eslintConfig": {
     "extends": [
