--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
     "electron": "^12.0.1",
+    "firebase": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
